...
import androidx.lifecycle.viewmodel.compose.viewModel
import coil.compose.rememberAsyncImagePainter
import com.swent.mapin.R
import com.swent.mapin.model.userprofile.UserProfile

object ChatScreenTestTags {
  const val CHAT_SCREEN = "Chats"
  const val CHAT_TAB = "ChatsTab"
  const val CHAT_BOTTOM_BAR_ITEM = "ChatBottomBarItem"
  const val CHAT_BOTTOM_BAR = "ChatBottomBar"
  const val CHAT_TOP_BAR = "ChatTopBar"
  const val CHAT_NAVIGATE_BUTTON = "ChatsNavigationButton"
  const val NEW_CONVERSATION_BUTTON = "NewConversationButton"
  const val CONVERSATION_ITEM = "ConversationItem"
  const val CHAT_EMPTY_TEXT = "ChatEmptyText"
  const val BACK_BUTTON = "backButton"
}
/**
 * Represents a chat conversation between one or more participants.
 *
 * @property id Unique identifier for the conversation.
 * @property participants The list of friends included in the conversation.
...
