...
import com.swent.mapin.R
import com.swent.mapin.model.friends.FriendWithProfile
import com.swent.mapin.ui.friends.FriendsViewModel
import kotlinx.coroutines.launch

object NewConversationScreenTestTags {
  const val NEW_CONVERSATION_SCREEN = "newConversationScreen"
  const val CONFIRM_BUTTON = "confirmButton"
  const val BACK_BUTTON = "backButton"
  const val FRIEND_ITEM = "friend"
  const val GROUP_NAME_DIALOG_TEXT = "groupText"
}

...
